@@ -1,3 +1,10 @@
+1999-08-24  Larry Jones  <larry.jones@sdrc.com>
+
+	* commit.c (check_fileproc): Don't crash when a file has no
+	repository, just treat it as unknown.  (Reported by Stefaan
+	Diericx <stefaan.diericx@argenta.be>.)
+	* sanity.sh (errmsg2): New tests, for this fix.
+
 1999-08-18  Larry Jones  <larry.jones@sdrc.com>
 
 	* update.c (special_file_mismatch): Initialize *_hardlinks to
